# chordify-plugin

./: .gitignore  CMakeLists.txt  README.md
manifest/: fifths.ttl  libchrodify.ttl  manifest.ttl.in
scripts/: install-build.sh
src/: fifths.c  fifths.cpp  lv2.cpp  musictypes.cpp  musictypes.h  uris.h
